# wmctrl

./: pyproject.toml  setup.py  wmctrl.py
.github/workflows/: publish.yml  test.yml
test/: test_wmctrl.py
wmctrl/: test_wmctrl.py  wmctrl.py
